[package]
name = "paginate"
version = "1.0.0"
authors = ["Daniel Samson"]
edition = "2018"
description = "A framework agnostic pagination crate, that is especially suited for databases, collections and web pages."
repository = "https://github.com/daniel-samson/paginate.git"
readme = "README.md"
license = "Apache-2.0"
keyworkds = ["paginate", "chunk", "page", "collection", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
