[package]
name = "paginate"
version = "1.1.7"
authors = ["Daniel Samson"]
edition = "2018"
description = "A framework agnostic pagination crate, that is especially suited for databases, slices and collections. Paginate calculates the range of pages indexes, making it ideal for accessing slices, chunking data and querying databases."
repository = "https://github.com/daniel-samson/paginate.git"
readme = "README.md"
documentation = "https://docs.rs/paginate"
homepage = "https://daniel-samson.github.io/paginate-docs/"
license = "Apache-2.0"
keywords = ["paginate", "chunk", "page", "collection", "database"]
categories = ["data-structures", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "daniel-samson/paginate", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[lib]
name = "paginate"
path = "src/lib.rs"
test = true
doctest = true
doc = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
